<resources>
    <string name="app_name">Ear4Music</string>
    <string name="title_activity_task_select">TaskSelectActivity</string>
    <string-array name="task_list">
        <item>C   E   G     C2</item>
        <item>C   E   G   B C2</item>
        <item>C   E F G   B C2</item>
        <item>C   E F G A B C2</item>
        <item>C D E F G A B C2</item>
        <item>B</item>
...
        <item>Missed</item>
    </string-array>
    <string name="setOfNotesId">Notes</string>
    <string name="notes_per_minute">Notes per minute</string>
    <string name="show_note_names">Show note names</string>
    <string name="task_type">Notes in sequence</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="select_notes">Select notes to learn</string>
    <string name="select_sub_task">Select task</string>
    <string name="notes_with_intonations">Notes with intonations</string>
    <string name="just_notes">Just notes</string>
    <string name="series_of_notes">Series of %d notes</string>
    <string name="task_completed_header">Task completed</string>
    <string name="task_instruction_header">Task instruction</string>
    <string name="task_accomplished_with_time">Correct answers %1$d%%.\nAverage answer time %2$d ms.</string>
    <string name="task_accomplished">Correct answers %d%%.</string>
    <string name="next_task">Next task</string>
    <string name="repeat">Repeat</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="progress">Overall %1$d Correct %2$d Wrong %3$d Missed %4$d</string>
    <string name="favourite">Add to favourites</string>
    <string name="temp">Temp</string>
    <string name="all_tasks">All tasks</string>
    <string name="favourite_tasks">Favourite tasks</string>
    <string name="version_banner">Version %1$s  Built %2$s</string>
    <string name="statistics_report_title">Task Statistics</string>
    <string name="statistics_report_summary">Correct answers %1$d%%.\nHere\'s how you did on each note:</string>
    <string name="statistics_report_summary_with_time">Correct answers %1$d%%.\nAverage answer time %2$d ms.\nHere\'s how you did on each note:</string>
    <string name="note_stat_format">✓ %1$d  ✗ %2$d  − %3$d</string>
</resources>

