...
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:paddingBottom="@dimen/screen_section_spacing"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_layout_background"
                android:elevation="0dp"
                android:padding="4dp"
                app:tabGravity="fill"
...
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/list_content_padding_bottom"
                    android:scrollbars="vertical" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/favourite_task_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/list_content_padding_bottom"
                    android:scrollbars="vertical"
                    android:visibility="gone" />
...
